# lsiee

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  PERFORMANCE.md  PRIVACY.md  QUICK_START.md  README.md  SECURITY.md  USER_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
lsiee/: __init__.py  __main__.py  cli.py  config.py
lsiee/file_intelligence/data_extraction/: __init__.py  parsers.py  query_executor.py  result_formatter.py  schema_detector.py
lsiee/file_intelligence/indexing/: embedding_indexer.py  indexer.py  metadata_extractor.py  scanner.py
lsiee/file_intelligence/search/: embeddings.py  semantic_search.py  text_extractor.py
lsiee/security/: __init__.py  input_validation.py  output_sanitization.py  path_security.py  privacy_tools.py  verification.py
lsiee/storage/: metadata_db.py  schemas.py  vector_db.py
lsiee/system_observability/: __init__.py
lsiee/system_observability/detection/: __init__.py  (+2 more)
lsiee/temporal_intelligence/: __init__.py
lsiee/utils/: file_utils.py  logging_utils.py
scripts/: demo.sh  init_databases.py  verify_installation.py
tests/: conftest.py
tests/integration/: test_cli.py  test_complete_workflow.py  test_cross_domain.py
tests/performance/: test_benchmarks.py
tests/unit/: test_config.py  test_database.py  test_detection.py  test_indexer.py  test_monitoring.py  test_parsers.py  test_query.py  test_root_cause.py  test_scanner.py  test_search.py  test_security_controls.py  test_temporal_intelligence.py  test_verification.py
(+12 files in other folders)
